--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,14 @@
 .h1 {
   color: var(--color-text-secondary);
 }
+.breadCrumb{
+  position : absolute;
+  bottom: 0;
+}
+.heroBanner{
+  object-fit: cover;
+  opacity: 0.7;
+}
+.main{
+  position: relative;
+}
