--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,3 +67,84 @@ body {
   font-weight: 600;
   color : red;
 }
+
+.animate{
+  animation : fadeInAnimation ease 2s;
+}
+.fadeout{
+  animation : fadeOutAnimation ease 3s;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  10%{
+    opacity: 0.1;
+  }
+  20%{
+    opacity: 0.2;
+  }
+  30%{
+    opacity: 0.3;
+  }
+  40%{
+    opacity: 0.4;
+  }
+  50%{
+    opacity: 0.5;
+  }
+  60%{
+    opacity: 0.6;
+  }
+  70%{
+    opacity: 0.7;
+  }
+  80%{
+    opacity: 0.8;
+  }
+  90%{
+    opacity: 0.9;
+  }
+  100% {
+      opacity: 1;
+   }
+}
+
+
+
+@keyframes fadeOutAnimation {
+  0% {
+      opacity: 1;
+  }
+  10%{
+    opacity: 0.9;
+  }
+  20%{
+    opacity: 0.8;
+  }
+  30%{
+    opacity: 0.7;
+  }
+  40%{
+    opacity: 0.6;
+  }
+  50%{
+    opacity: 0.5;
+  }
+  60%{
+    opacity: 0.4;
+  }
+  70%{
+    opacity: 0.3;
+  }
+  80%{
+    opacity: 0.2;
+  }
+  90%{
+    opacity: 0.1;
+  }
+  100% {
+      opacity: 0;
+   }
+}
