--- a/styles/SplitNav.module.css
+++ b/styles/SplitNav.module.css
@@ -2,8 +2,10 @@
     /* position: relative; */
 }
 .navImage{
-    height : 30%;
+    height: 100%;
     object-fit: cover;
-    top : 0;
+    top: 0;
     z-index: 100;
+    position: absolute;
+    width: 98%;
 }
